# hydra-slurmpilot-launcher

./: .gitignore  README.md  pyproject.toml
example/: .spignore  config.yaml  my_app.py
hydra_plugins/hydra_slurmpilot_launcher/: config.py  slurmpilot_launcher.py
tests/: test_slurmpilot_launcher.py
