[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydra-slurmpilot-launcher"
version = "0.1.0"
description = "Slurmpilot Launcher for Hydra apps — submit multirun sweeps to a Slurm cluster from your laptop."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Noah Farr", email = "login@noahfarr.com" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "hydra-core>=1.3",
    "slurmpilot>=0.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["hydra_plugins*"]
namespaces = true

[tool.setuptools.package-data]
"hydra_plugins.hydra_slurmpilot_launcher" = ["py.typed"]
